src/tests/functionality/assignment_5_functions_headers/valid/16_mandatory_nested_local_include_chain.c
#include "src/tests/functionality/assignment_5_functions_headers/headers/nested_outer.h"

int main() {
    return nested_outer_value();
}
