src/tests/functionality/assignment_5_functions_headers/invalid_semantic/19_mandatory_unknown_header_function_not_declared.c
#include "src/tests/functionality/assignment_5_functions_headers/headers/does_not_exist.h"

int main() {
    return missing_function(1);
}
